samples/_failures_safe/1761711479_d174a7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7ef2d64e.c:166:1: error: expected declaration specifiers or ‘...’ at end of input
  166 | State process_event(StateMachine *sm,
      | ^~~~~
